--- a/application.css
+++ b/application.css
@@ -1,26 +1,39 @@
 #board {
   display: flex;
   flex-flow: column;
-  align-content: center;
+  justify-content: center;
+  align-items: center;
+  background: lightgray;
 }
 
 .row {
-  display: flex;
+  display: block;
   flex-flow: row;
-  align-content: center;
+  justify-content: space-between;
+  align-content: space-around;
+  height: 35px;
+  border-style: inset;
+
 }
 
-.tile {
-  height: 25px;
-  width: 25px;
-  background: lightgray;
-  float: left;
+.row:after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+#tile {
+  display: inline;
+  background-color: gray;
+  height: 24px;
+  width: 35px;
   border-style: outset;
-  border-width: 2px;
-  line-height: 20px;
-  padding-left: 3px;
-  font-size: 25px;
-  font-weight: bold;
-  position: relative;
-  text-align: center;
+}
+
+.explored {
+  border-style: inset;
+}
+
+.flagged, .bombed {
+  color: red;
 }
